--- a/tekton/src/pipelines/taskdefs/apps/assist-app.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/assist-app.yml.j2
@@ -2,9 +2,6 @@
   timeout: "0"
   params:
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(4) }}
-    - name: devops_suite_name
-      value: app-assist-install
-
     - name: mas_instance_id
       value: $(params.mas_instance_id)
     - name: mas_app_id
@@ -20,6 +17,10 @@
       value: $(params.ibm_entitlement_key)
     - name: custom_labels
       value: $(params.custom_labels)
+
+    # Workspace
+    - name: mas_workspace_id
+      value: "$(params.mas_workspace_id)"
   taskRef:
     name: mas-devops-suite-app-install
     kind: Task
