--- a/tekton/src/pipelines/taskdefs/apps/iot-app.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/iot-app.yml.j2
@@ -1,10 +1,10 @@
 - name: app-install-iot
   timeout: "0"
+  taskRef:
+    name: mas-devops-suite-app-install
+    kind: Task
   params:
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(4) }}
-    - name: devops_suite_name
-      value: app-iot-install
-
     - name: artifactory_username
       value: $(params.artifactory_username)
     - name: artifactory_token
@@ -27,13 +27,14 @@
     - name: mas_app_settings_iot_fpl_pvc_storage_class
       value: $(params.storage_class_rwo) # use common rwo storage class as user is not prompted to choose this storage class
 
-  taskRef:
-    name: mas-devops-suite-app-install
-    kind: Task
+    # Workspace
+    - name: mas_workspace_id
+      value: "$(params.mas_workspace_id)"
   workspaces:
+    - name: configs
+      workspace: shared-configs
     - name: pod-templates
       workspace: shared-pod-templates
-  # Only install IoT if a channel has been chosen
   when:
     - input: "$(params.mas_app_channel_iot)"
       operator: notin
