--- a/tekton/src/pipelines/taskdefs/apps/optimizer-app.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/optimizer-app.yml.j2
@@ -1,10 +1,10 @@
 - name: app-install-optimizer
   timeout: "0"
+  taskRef:
+    name: mas-devops-suite-app-install
+    kind: Task
   params:
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(4) }}
-    - name: devops_suite_name
-      value: app-optimizer-install
-
     - name: mas_instance_id
       value: $(params.mas_instance_id)
     - name: mas_app_id
@@ -21,10 +21,13 @@
       value: $(params.ibm_entitlement_key)
     - name: custom_labels
       value: $(params.custom_labels)
-  taskRef:
-    name: mas-devops-suite-app-install
-    kind: Task
-  # Only install Optimizer if a channel has been chosen
+
+    # Workspace
+    - name: mas_workspace_id
+      value: "$(params.mas_workspace_id)"
+  workspaces:
+    - name: configs
+      workspace: shared-configs
   when:
     - input: "$(params.mas_app_channel_optimizer)"
       operator: notin
