--- a/tekton/src/pipelines/taskdefs/apps/visualinspection-app.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/visualinspection-app.yml.j2
@@ -1,10 +1,10 @@
 - name: app-install-visualinspection
   timeout: "0"
+  taskRef:
+    name: mas-devops-suite-app-install
+    kind: Task
   params:
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(4) }}
-    - name: devops_suite_name
-      value: app-visualinspection-install
-
     - name: mas_instance_id
       value: $(params.mas_instance_id)
     - name: mas_app_id
@@ -16,15 +16,18 @@
     - name: mas_app_channel
       value: "$(params.mas_app_channel_visualinspection)"
     - name: mas_app_settings_visualinspection_storage_class
-      value: $(params.storage_class_rwx) # use common rwx storage class as user is not prompted to choose this storage class
+      value: $(params.storage_class_rwx)
     - name: ibm_entitlement_key
       value: $(params.ibm_entitlement_key)
     - name: custom_labels
       value: $(params.custom_labels)
-  taskRef:
-    name: mas-devops-suite-app-install
-    kind: Task
-  # Only install MVI if a channel has been chosen
+
+    # Workspace
+    - name: mas_workspace_id
+      value: "$(params.mas_workspace_id)"
+  workspaces:
+    - name: configs
+      workspace: shared-configs
   when:
     - input: "$(params.mas_app_channel_visualinspection)"
       operator: notin
