--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variablesTF.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variablesTF.yaml.j2
@@ -1,9 +1,4 @@
-{% if IS_EFS %}
-variable "vpc_id" {
-  type        = string
-  description = "ID of VPC"
-}
-
+{%- if (IS_S3 | lower == 'true') or (IS_EFS | lower == 'true')%}
 variable "instance_name" {
   type        = string
   description = "Name of Instance"
@@ -13,13 +8,24 @@ variable "cluster_name" {
   type        = string
   description = "Name of Cluster"
 }
-{% endif %}
+{%- endif %}
+{%- if IS_EFS | lower == 'true'%}
+variable "vpc_id" {
+  type        = string
+  description = "ID of VPC"
+}
+{%- endif %}
 
-{% if IS_IAM %}
+
+{%- if (IS_IAM | lower == 'true') or (IS_S3 | lower == 'true') %}
 variable "name_prefix" {
 	type        = string
 	description = "name_prefix"
 }
+{%- endif %}
+
+{%- if IS_IAM | lower == 'true'%}
+
 variable "create_s3_iam_group" {
 	type        = bool
 	description = "Whether to create s3 iam group or not"
@@ -38,4 +44,56 @@ variable "s3_iam_users_list" {
 		iam_user_name = string
 	}))
 }
-{% endif %}
+{%- endif %}
+
+{%- if IS_S3 | lower == 'true'%}
+variable "access_level_rw" {
+  type        = string
+  description = "read and write"
+  default     = "rw"
+}
+variable "access_level_ro" {
+  type        = string
+  description = "read and write"
+  default     = "ro"
+}
+variable "common_tags" {
+  type        = map(string)
+  description = "Common resource tags"
+}
+variable "create_bucket" {
+  type        = bool
+  description = "Enable creation of bucket"
+}
+variable "location" {
+  type = object({
+    region             = string
+    availability_zones = list(string)
+  })
+  description = "location details"
+  default = {
+    region             = "us-east-1"
+    availability_zones = ["us-east-1a", "us-east-1b", "us-east-1c"]
+  }
+}
+variable "s3bucket_name_prefix" {
+  type        = string
+  description = "s3 bucket name prefix"
+}
+variable "iam_user_arn_prefix" {
+  type        = string
+  description = "iam user arn"
+}
+variable "s3_encryption_algorithm" {
+  type        = string
+  description = "s3 encryption algorithm"
+}
+variable "create_bucket" {
+  type        = bool
+  description = "Enable creation of bucket"
+}
+variable "environment" {
+  type        = string
+  description = "Environment name"
+}
+{%- endif %}
