[patch] Enable post-config aiservice in Manage

--- a/tekton/src/pipelines/taskdefs/apps/manage-workspace.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/manage-workspace.yml.j2
@@ -12,6 +12,8 @@
       value: manage
     - name: mas_workspace_id
       value: "$(params.mas_workspace_id)"
+    - name: aiservice_instance_id
+      value: "$(params.aiservice_instance_id)"
 
     # Application Workspace - Operand
     - name: mas_appws_components
