--- a/tekton/src/tasks/suite-app-config.yml.j2
+++ b/tekton/src/tasks/suite-app-config.yml.j2
@@ -24,7 +24,11 @@ spec:
       description: Maximo Application Suite Application ID
     - name: mas_workspace_id
       type: string
-      description: Maximo Application Suite Workspace ID
+      description: Maximo Application Suite Workspace Id
+
+    - name: aiservice_instance_id
+      type: string
+      description: AI Service Instance ID
 
     # Application Workspace - Operand
     - name: mas_appws_components
@@ -278,7 +282,9 @@ spec:
       - name: MAS_APP_ID
         value: $(params.mas_app_id)
       - name: MAS_WORKSPACE_ID
-        value: $(params.mas_workspace_id)
+        value: $(params.mas_workspace_id)Details
+      - name: AISERVICE_INSTANCE_ID
+        value: $(params.aiservice_instance_id)
 
       # Application Workspace - Operand
       - name: MAS_APPWS_BINDINGS_JDBC
