--- a/tekton/src/pipelines/mas-upgrade.yml.j2
+++ b/tekton/src/pipelines/mas-upgrade.yml.j2
@@ -18,6 +18,7 @@ spec:
     # -------------------------------------------------------------------------
     {{ lookup('template', params_src_dir ~ '/install-common.yml.j2') | indent(4)  }}
     {{ lookup('template', params_src_dir ~ '/install.yml.j2') | indent(4) }}
+    {{ lookup('template', params_src_dir ~ '/install-aiservice.yml.j2') | indent(4) }}
 
     # 3. Upgrade
     # -------------------------------------------------------------------------
