[patch] add default value for aiservice_instance_id

--- a/tekton/src/tasks/suite-app-config.yml.j2
+++ b/tekton/src/tasks/suite-app-config.yml.j2
@@ -29,6 +29,7 @@ spec:
     - name: aiservice_instance_id
       type: string
       description: AI Service Instance ID
+      default: ""
 
     # Application Workspace - Operand
     - name: mas_appws_components
