--- a/tekton/src/tasks/suite-app-config.yml.j2
+++ b/tekton/src/tasks/suite-app-config.yml.j2
@@ -283,7 +283,7 @@ spec:
       - name: MAS_APP_ID
         value: $(params.mas_app_id)
       - name: MAS_WORKSPACE_ID
-        value: $(params.mas_workspace_id)Details
+        value: $(params.mas_workspace_id)
       - name: AISERVICE_INSTANCE_ID
         value: $(params.aiservice_instance_id)
 
